feat: adding new doctypes & roles

--- a/gym_management_system/gym_management_system/doctype/gym_settings/gym_settings.json
+++ b/gym_management_system/gym_management_system/doctype/gym_settings/gym_settings.json
@@ -8,6 +8,7 @@
  "engine": "InnoDB",
  "field_order": [
   "gym_name",
+  "no_of_lockers",
   "column_break_almk",
   "mobile_number",
   "section_break_wgiq",
@@ -40,12 +41,19 @@
   {
    "fieldname": "section_break_wgiq",
    "fieldtype": "Section Break"
+  },
+  {
+   "fieldname": "no_of_lockers",
+   "fieldtype": "Int",
+   "label": "No of Lockers",
+   "non_negative": 1,
+   "reqd": 1
   }
  ],
  "index_web_pages_for_search": 1,
  "issingle": 1,
  "links": [],
- "modified": "2023-07-03 23:41:49.827533",
+ "modified": "2023-07-04 13:31:45.095675",
  "modified_by": "Administrator",
  "module": "Gym Management System",
  "name": "Gym Settings",
@@ -58,6 +66,16 @@
    "print": 1,
    "read": 1,
    "role": "System Manager",
+   "share": 1,
+   "write": 1
+  },
+  {
+   "create": 1,
+   "delete": 1,
+   "email": 1,
+   "print": 1,
+   "read": 1,
+   "role": "Gym Admin",
    "share": 1,
    "write": 1
   }
